# Chatserver

./: .gitignore  Cargo.toml  README.md  file_path  file_path_freelist
.VSCodeCounter/2023-11-10_01-35-17/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
benches/: my_benchmark.rs
database/: filesync-5.json  messages-0.json  messages-2.json  messages-3.json  userchatrooms-0.json  userchatrooms-1.json  users.json
proc_macro/: Cargo.toml
proc_macro/src/: lib.rs
src/: http.rs  lib.rs  main.rs
src/relational/: id.rs  mod.rs  types.rs
src/server_api/: mod.rs
src/storage/: db.rs  mod.rs  storage_save.rs
validcode/: valid.txt
website/: chat.html  index.html  messenger.js  register.html  script.js
website/chat/: chat.css  chat.js
website/login/: login.html  login.js
website/register/: register.css  register.html  register.js
website/shared/: database.js
