[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.31.0", features = ["full"] }
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
bincode = "1.3.3"
chrono = "0.4"
bytemuck = "1.14.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
